# python-nmcli-wrapper

./: .gitignore  LICENSE.txt  README.md  README.rst  example.py  sample.py  setup.cfg  setup.py
nmcli/: __init__.py  nmcli.py
python_nmcli_wrapper/: .nmcli.py.swp  __init__.py  nmcli.py
tests/: test_nmcli.py
