[metadata]
name = python_nmcli_wrapper
version = attr: python_nmcli_wrapper.__version__
description = Python wrapper for NetworkManager-CLI(nmcli)
long_description = file: README.md
author = Satoshi HOSHINO
author_email = s-hoshino@ib-sol.co.jp
url =
license = MIT License

[options]
packages = find:
install_requires =
test_suite = tests

[options.packages.find]
exclude =
    docs
    tests
